[build-system]
requires      = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainbow-api"
version = "1.0.10"
description = "Read chromatography and mass spectrometry binary files"
readme = "README.md"
license = {text = "COPYING.LESSER"}
authors = [
    {name = "Evan Shi and Eugene Kwan"},
    {email = "evanyshi@cmu.edu"}
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"
]
dependencies = [
    "numpy",
    "matplotlib",
    "lxml",
    "pandas"
]

[project.urls]
Repository = "https://github.com/evanyeyeye/rainbow"
Documentation = "https://rainbow-api.readthedocs.io"
