[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainbow-api"
version = "1.0.10"
description = "Read chromatography and mass spectrometry binary files"
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["COPYING.LESSER", "COPYING"]
authors = [
    { name = "Evan Shi", email = "evanyshi@cmu.edu" },
    { name = "Eugene Kwan" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "lxml",
    "pandas"
]

[project.urls]
Repository = "https://github.com/evanyeyeye/rainbow"
Documentation = "https://rainbow-api.readthedocs.io"
