[build-system]
requires      = ["setuptools>=63.0.0", "wheel", "Cython>=0.29.30"]
build-backend = "setuptools.build_meta"

[project]
name = "rainbow-api"
version = "1.3.0"
description = "Read chromatography and mass spectrometry binary files"
readme = "README.md"
license = {text = "COPYING.LESSER"}
authors = [
    {name = "Evan Shi and Eugene Kwan"},
    {email = "evanyshi@cmu.edu"}
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"
]
dependencies = [
    "numpy",
    "matplotlib",
    "lxml",
    "pandas"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/evanyeyeye/rainbow"
Documentation = "https://rainbow-api.readthedocs.io"

[tool.setuptools.packages.find]
# Declare the package explicitly. Without this, setuptools' flat-layout
# auto-discovery treats sibling directories (e.g. cibuildwheel's wheelhouse/,
# or tests/, docs/) as top-level packages and fails with "Multiple top-level
# packages discovered in a flat-layout".
include = ["rainbow*"]

[tool.cibuildwheel]
# Build CPython wheels for the optional compiled accelerator. The extension
# is optional, so any platform that can't compile still yields a working
# (pure-Python-fallback) wheel, and the sdist covers everything else.
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* *_i686 *-win32"

[tool.pytest.ini_options]
# Tests are run from the repo root (fixtures are referenced as tests/inputs/...
# and the suite imports the `tests` package).
testpaths = ["tests"]
